--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>USATransCar - Точный Калькулятор Доставки</title>
+    <title>Точный Калькулятор Доставки</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚗 USATransCar - Калькулятор Доставки</h1>
+            <h1>🚗Калькулятор Доставки</h1>
             <p>Точные расчеты стоимости доставки автомобилей из США</p>
         </div>
 
