--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор Доставки AutoBuyer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Калькулятор Доставки</h1>
+            <h1>Калькулятор Доставки</h1 Kaccul
             <p>Рассчитайте стоимость доставки автомобилей из США</p>
         </div>
 
         <div class="main-content">
-            <div class="calculator-form">
+            <div class="calculator-form glass-effect">
                 <form id="calculatorForm">
                     <div class="form-section">
                         <h3>Аукцион и Локация</h3>
@@ -64,13 +64,13 @@
                     </div>
                 </form>
                 
-                <div class="status-section">
+                <div class="status-section glass-effect">
                     <strong>Статус:</strong>
                     <div id="status">Загрузка...</div>
                 </div>
             </div>
 
-            <div class="calculate-section">
+            <div class="calculate-section glass-effect">
                 <h2>Расчёт стоимости</h2>
 
                 <div class="selected-options">
@@ -100,7 +100,7 @@
                     Заполните все поля
                 </button>
 
-                <div class="result-section" id="resultSection">
+                <div class="result-section glass-effect" id="resultSection">
                     <div class="price-breakdown" id="priceBreakdown"></div>
                     <div class="final-price">
                         <div class="amount" id="finalAmount">$0</div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class="info-section">
+                <div class="info-section glass-effect">
                     <h4>Что включено:</h4>
                     <ul>
                         <li>Доставка (аукцион → порт прибытия)</li>
